# pyIGRF14

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
pyIGRF14/: __init__.py  calculate.py  loadCoeffs.py  value.py
test/: igrf12syn_old.py  magnetic.py  test_igrf14.py
