[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "flit>=3.12,<4",
    "pre-commit>=4.1,<4.4",
    "twine>=6.0,<7.0",
    "wheel>=0.45",
]

[project]
name = "pyIGRF14"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "zzyztyy", email = "2375672032@qq.com" }]
maintainers = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
dependencies = ["numpy"]
dynamic = ["description", "version"]

[project.optional-dependencies]
test = ["pytest", "goto-statement>=1.2,<2.0"]

[project.urls]
Homepage = "https://pypi.org/project/pyIGRF14/"
Repository = "https://github.com/OpenSpeleo/pyIGRF14"
